# games101

./: .gitignore
Assignment1/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment6/: BVH.cpp  Bounds3.hpp  Scene.cpp  Triangle.hpp  main.cpp
Assignment6/web/: BVH.js  Bounds3.js  CanvasTool.js  Renderer.js  Scene.js  TrialgleMesh.js  Triangle.js  Vector3.js  global.js  index.html  index.js
Assignment7/: Renderer.cpp  main.cpp
Assignment7/web/: BVH.js  Material.js  Object.js  Renderer.js  Scene.js  TrialglesMesh.js  Triangle.js  global.js  index.html  main.js
Assignment7/web/lib/: MyOBJLoader.js
Assignment7/web/math/: Vector3.js
RayTracing/: readme.md  射线与三角形相交.md
RayTracing/ref/threePathTracing-master/: README.md
RayTracing/ref/threePathTracing-master/MyExamples/PathTracing/: index.html  main.js
RayTracing/ref/threePathTracing-master/MyExamples/PathTracing/js/: DeveloperError.js  PathTracing.js  ScreenCopy.js  ScreenOutput.js  Utils.js  Viewer.js  defaultValue.js  defined.js  destroyObject.js
RayTracing/ref/threePathTracing-master/MyExamples/PathTracing/shader/: PathTracingFS.glsl  PathTracingVS.js  (+3 more)
RayTracing/包围盒/: readme.md
RayTracing/卡洛积分/: readme.md
RayTracing/栅格空间转世界空间/: readme.md
RayTracing/辐射度量学/: readme.md  基本概念.md  概念理解.md
assignment5/: CMakeLists.txt  Renderer.cpp  global.hpp
assignment5/web/: CanvasTool.js  Light.js  Object.js  Renderer.js  Scene.js  Sphere.js  Triangle.js  Vector2.js  Vector3.js  global.js  index.html  index.js  zzn.html
doc/: 相交.md
pa0/: 1.cpp  CMakeLists.txt  main.cpp  readme.md
pbr/: readme.md
(+1 files in other folders)
